--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,9 @@
 {
   "name": "ngCart",
   "description": "Shopping Cart built for AngularJS",
+  "main": [
+    "dist/ngCart.js"
+  ],
   "keywords": ["AngularJS", "module", "directive", "shopping cart", "e-commerce", "cart", "basket", "shopping"],
   "authors": {"name":"Dan Shreim", "email":"dan@snapjay.com>", "homepage":"http://www.snapjay.com/"},
     "version": "0.0.1-rc.2",
